--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 	<body style = "margin: 0px">
 		<div style = "display: flex; flex-direction: row">
 			<div>
-				<div style = "white-space: nowrap;"><input class = "checkboxes" type = "checkbox" name = "maps" onclick = "setVisibility(this)"><label>Map</label></div>
-				<div style = "white-space: nowrap;"><input class = "checkboxes" type = "checkbox" name = "logs" onclick = "setVisibility(this)"><label>Logs</label></div>
-				<div style = "white-space: nowrap;"><input class = "checkboxes" type = "checkbox" name = "gordos" onclick = "setVisibility(this)"><label>Gordos</label></div>
-				<div style = "white-space: nowrap;"><input class = "checkboxes" type = "checkbox" name = "keys" onclick = "setVisibility(this)"><label>Keys</label></div>
-				<div style = "white-space: nowrap;"><input class = "checkboxes" type = "checkbox" name = "gates" onclick = "setVisibility(this)"><label>Gates</label></div>
-				<div style = "white-space: nowrap;"><input class = "checkboxes" type = "checkbox" name = "vaults" onclick = "setVisibility(this)"><label>Vaults</label></div>
+				<div style = "white-space: nowrap;"><input class = "checkboxes" type = "checkbox" name = "map" onclick = "setVisibility(this)"><label>Map</label></div>
+				<div style = "white-space: nowrap;"><input class = "checkboxes" type = "checkbox" name = "log" onclick = "setVisibility(this)"><label>Logs</label></div>
+				<div style = "white-space: nowrap;"><input class = "checkboxes" type = "checkbox" name = "gordo" onclick = "setVisibility(this)"><label>Gordos</label></div>
+				<div style = "white-space: nowrap;"><input class = "checkboxes" type = "checkbox" name = "key" onclick = "setVisibility(this)"><label>Keys</label></div>
+				<div style = "white-space: nowrap;"><input class = "checkboxes" type = "checkbox" name = "gate" onclick = "setVisibility(this)"><label>Gates</label></div>
+				<div style = "white-space: nowrap;"><input class = "checkboxes" type = "checkbox" name = "vault" onclick = "setVisibility(this)"><label>Vaults</label></div>
 			</div>
 			<div id = "canvas" style = "width: 100vw; height: 100vh; margin: 0px"></div>
 		<div>
 		<script src = "./js/openseadragon.js"></script>
-		<script src = "./js/index.js"></script>
 		<script src = "./js/cycle.js"></script>
 		<script src = "./js/lodash.js"></script>
+		<script src = "./js/index.js"></script>
 	</body>
 </html>
