Made labels clickable. Replaced gate, vault and xmap assets with texture dumps. Filled in map data, gordo, key, gate and vault coordinates and gordo types. No assets for gordo types yet — needs a dump. Hobson's logs to be filled in next. General marker opacity attribute set. Gave the overlay creation loop its own function "addOverlays" and referenced it in viewer's "open" handler. Sorted and formatted code in accordance to ErquintFmt. Committed with Sublime Merge.

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 	<body style = "margin: 0px">
 		<div style = "display: flex; flex-direction: row">
 			<div>
-				<div style = "white-space: nowrap;"><input class = "checkboxes" type = "checkbox" name = "map" onclick = "setVisibility(this)"><label>Map</label></div>
-				<div style = "white-space: nowrap;"><input class = "checkboxes" type = "checkbox" name = "log" onclick = "setVisibility(this)"><label>Logs</label></div>
-				<div style = "white-space: nowrap;"><input class = "checkboxes" type = "checkbox" name = "gordo" onclick = "setVisibility(this)"><label>Gordos</label></div>
-				<div style = "white-space: nowrap;"><input class = "checkboxes" type = "checkbox" name = "key" onclick = "setVisibility(this)"><label>Keys</label></div>
-				<div style = "white-space: nowrap;"><input class = "checkboxes" type = "checkbox" name = "gate" onclick = "setVisibility(this)"><label>Gates</label></div>
-				<div style = "white-space: nowrap;"><input class = "checkboxes" type = "checkbox" name = "vault" onclick = "setVisibility(this)"><label>Vaults</label></div>
+				<div style = "white-space: nowrap;"><label><input class = "checkboxes" type = "checkbox" name = "map"		onclick = "setVisibility(this)">Map</label></div>
+				<div style = "white-space: nowrap;"><label><input class = "checkboxes" type = "checkbox" name = "log"		onclick = "setVisibility(this)">Logs</label></div>
+				<div style = "white-space: nowrap;"><label><input class = "checkboxes" type = "checkbox" name = "gordo"	onclick = "setVisibility(this)">Gordos</label></div>
+				<div style = "white-space: nowrap;"><label><input class = "checkboxes" type = "checkbox" name = "key"		onclick = "setVisibility(this)">Keys</label></div>
+				<div style = "white-space: nowrap;"><label><input class = "checkboxes" type = "checkbox" name = "gate"	onclick = "setVisibility(this)">Gates</label></div>
+				<div style = "white-space: nowrap;"><label><input class = "checkboxes" type = "checkbox" name = "vault"	onclick = "setVisibility(this)">Vaults</label></div>
 			</div>
 			<div id = "canvas" style = "width: 100vw; height: 100vh; margin: 0px"></div>
 		<div>
