--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="author"				content="Murad 'Gness Erquint' Beybalaev">
 	<meta name="viewport"			content="width=device-width, initial-scale=1.0">
 	<link rel='icon'					href='./assets/favicon.ico'>
-	<title>Plort.ml — Interactive Slime Rancher map</title>
+	<title>Plort.me — Interactive Slime Rancher map</title>
 	<style>
 		body		{background-color: #AAAEB4;margin: 0px;}
 		#flex		{display: flex;flex-direction: row;white-space: nowrap;}
