--- a/index.html
+++ b/index.html
@@ -7,21 +7,107 @@
 	<link rel='icon'					href='./assets/favicon.ico'>
 	<title>Plort.me — Interactive Slime Rancher map</title>
 	<style>
-		body		{background-color: #AAAEB4;margin: 0px;}
-		#flex		{display: flex;flex-direction: row;white-space: nowrap;}
-		#canvas	{width: 100vw;height: 100vh;margin: 0px;}
+		*
+		{
+			margin:0;
+		}
+		body
+		{
+			background-color:#AAAEB4;
+		}
+		#main
+		{
+			display:flex;
+			flex-direction:row;
+		}
+		#canvas
+		{
+			width:100vw;
+			height:100vh;
+		}
+		#checkboxes
+		{
+			white-space:nowrap;
+		}
+		#sidebar_footer
+		{
+			display:flex;
+			flex-direction:column;
+			flex-grow:1;
+			justify-content:flex-end;
+			width:min-content;
+			width:-moz-min-content;
+			width:-webkit-min-content;
+		}
+		#sidebar
+		{
+			display:flex;
+			flex-direction: column;
+			margin-left:4;
+			margin-bottom:2;
+			margin-top:1;
+			margin-right:4;
+		}
 	</style>
+	<!-- AdSense start -->
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<script>
+		(adsbygoogle = window.adsbygoogle || []).push({
+			google_ad_client: "ca-pub-3830834436646064",
+			enable_page_level_ads: true
+		});
+	</script>
+	<!-- AdSense end -->
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-131891326-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+		gtag('config', 'UA-131891326-1');
+	</script>
+	<!-- Google Analytics end -->
 </head>
 <html>
 	<body>
-		<div id=flex>
-			<div>
-				<label><input type="checkbox" class="checkboxes" name="map"		onclick="setVisibility(this)">Map Nodes	</label><br>
-				<label><input type="checkbox" class="checkboxes" name="log"		onclick="setVisibility(this)">Logs			</label><br>
-				<label><input type="checkbox" class="checkboxes" name="gordo"	onclick="setVisibility(this)">Gordos		</label><br>
-				<label><input type="checkbox" class="checkboxes" name="key"		onclick="setVisibility(this)">Keys			</label><br>
-				<label><input type="checkbox" class="checkboxes" name="gate"	onclick="setVisibility(this)">Gates			</label><br>
-				<label><input type="checkbox" class="checkboxes" name="vault"	onclick="setVisibility(this)">Vaults		</label><br>
+		<div id=main>
+			<div id='sidebar'>
+				<div id='checkboxes'>
+					<label><input type="checkbox" name="map"		onclick="setVisibility(this)">Map Nodes	</label><br>
+					<label><input type="checkbox" name="log"		onclick="setVisibility(this)">Logs			</label><br>
+					<label><input type="checkbox" name="gordo"	onclick="setVisibility(this)">Gordos		</label><br>
+					<label><input type="checkbox" name="key"		onclick="setVisibility(this)">Keys			</label><br>
+					<label><input type="checkbox" name="gate"		onclick="setVisibility(this)">Gates			</label><br>
+					<label><input type="checkbox" name="vault"	onclick="setVisibility(this)">Vaults		</label><br>
+				</div>
+				<div id='sidebar_footer'>
+					<div id='donate'>
+						<p>
+							If you like developers not starving to death...
+						</p>
+						<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+							<!-- Identify your business so that you can collect the payments. -->
+							<input type="hidden" name="business" value="gness.na@gmail.com">
+							<!-- Specify a Donate button. -->
+							<input type="hidden" name="cmd" value="_donations">
+							<!-- Specify details about the contribution -->
+							<input type="hidden" name="item_name" value="Plort.me (srmap) donation">
+							<input type="hidden" name="item_number" value="">
+							<input type="hidden" name="currency_code" value="USD">
+							<!-- Display the payment button. -->
+							<input type="image" name="submit"
+							src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" alt="Donate">
+							<img alt="" width="1" height="1" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" >
+						</form>
+					</div>
+					<p>
+						Every bit counts.
+					</p>
+					<hr>
+					<p>
+						Report bugs<br>or just bug me at:<br>gness.na@gmail.com
+					</p>
+				</div>
 			</div>
 			<div id="canvas"></div>
 		<div>
