--- a/index.html
+++ b/index.html
@@ -43,10 +43,7 @@
 		{
 			display:flex;
 			flex-direction: column;
-			margin-left:4;
-			margin-bottom:2;
-			margin-top:1;
-			margin-right:4;
+			margin:4;
 		}
 	</style>
 	<!-- AdSense start -->
@@ -105,6 +102,7 @@
 					</p>
 					<hr>
 					<p>
+						This page is<br>still in development.<br>
 						Report bugs<br>or just bug me at:<br>gness.na@gmail.com
 					</p>
 				</div>
