--- a/index.html
+++ b/index.html
@@ -102,8 +102,11 @@
 					</p>
 					<hr>
 					<p>
-						This page is<br>still in development.<br>
-						Report bugs<br>or just bug me at:<br>gness.na@gmail.com
+						Please, report bugs or just bug me at: gness.na@gmail.com
+					</p>
+					<hr>
+					<p>
+						This page is hosted with <a href='https://github.com/Erquint/srmap'>GitHub</a> Pages and still is in active development.
 					</p>
 				</div>
 			</div>
