--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
 		<script src='./js/openseadragon.js'></script>
 		<script src='./js/cycle.js'></script>
 		<script src='./js/lodash.js'></script>
+        <script src='./js/unfetch.umd.js'></script>
 		<script src='./js/index.js'></script>
 	</body>
 </html>
